# scrapingbee-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sync-skills.sh
.agents/skills/scrapingbee-cli/: SKILL.md
.agents/skills/scrapingbee-cli-guard/: SKILL.md
.agents/skills/scrapingbee-cli/reference/amazon/: product-output.md  product.md  search.md
.agents/skills/scrapingbee-cli/reference/batch/: output.md  overview.md
.agents/skills/scrapingbee-cli/reference/chatgpt/: overview.md
.agents/skills/scrapingbee-cli/reference/crawl/: overview.md
.agents/skills/scrapingbee-cli/reference/google/: overview.md
.agents/skills/scrapingbee-cli/reference/proxy/: strategies.md
.agents/skills/scrapingbee-cli/reference/schedule/: overview.md
.agents/skills/scrapingbee-cli/reference/scrape/: extraction.md  options.md  strategies.md
.agents/skills/scrapingbee-cli/reference/walmart/: product-output.md  product.md  search.md
.agents/skills/scrapingbee-cli/reference/youtube/: metadata.md  search.md
.amazonq/cli-agents/: scraping-pipeline.json
.augment/agents/: scraping-pipeline.md
.claude-plugin/: marketplace.json  plugin.json
.gemini/agents/: scraping-pipeline.md
.github/skills/scrapingbee-cli/: SKILL.md
.github/skills/scrapingbee-cli-guard/: SKILL.md
.github/skills/scrapingbee-cli/reference/amazon/: pricing.md
.github/skills/scrapingbee-cli/reference/batch/: export.md
.github/skills/scrapingbee-cli/reference/fast-search/: overview.md
.github/skills/scrapingbee-cli/reference/gemini/: overview.md
.github/skills/scrapingbee-cli/reference/google/: overview.md
.github/skills/scrapingbee-cli/reference/scrape/: options.md  output.md  overview.md
.github/skills/scrapingbee-cli/reference/usage/: overview.md
.github/skills/scrapingbee-cli/reference/walmart/: search.md
.github/skills/scrapingbee-cli/reference/youtube/: metadata.md  search.md
.github/skills/scrapingbee-cli/rules/: install.md  security.md
.github/workflows/: ci.yml  publish.yml
.kiro/skills/scrapingbee-cli/: SKILL.md
.kiro/skills/scrapingbee-cli-guard/: SKILL.md
.kiro/skills/scrapingbee-cli/.claude/agents/: scraping-pipeline.md
.kiro/skills/scrapingbee-cli/reference/amazon/: product.md  search.md
.kiro/skills/scrapingbee-cli/reference/batch/: export.md  overview.md
.kiro/skills/scrapingbee-cli/reference/chatgpt/: overview.md
.kiro/skills/scrapingbee-cli/reference/fast-search/: overview.md
.kiro/skills/scrapingbee-cli/reference/scrape/: output.md  overview.md
.kiro/skills/scrapingbee-cli/reference/walmart/: search.md
.kiro/skills/scrapingbee-cli/reference/youtube/: search.md
.kiro/skills/scrapingbee-cli/rules/: install.md  security.md
.opencode/agents/: scraping-pipeline.md
.opencode/skills/scrapingbee-cli/: SKILL.md
.opencode/skills/scrapingbee-cli-guard/: SKILL.md
.opencode/skills/scrapingbee-cli/reference/: troubleshooting.md
.opencode/skills/scrapingbee-cli/reference/amazon/: product.md
.opencode/skills/scrapingbee-cli/reference/auth/: overview.md
.opencode/skills/scrapingbee-cli/reference/batch/: export.md
.opencode/skills/scrapingbee-cli/reference/crawl/: overview.md
.opencode/skills/scrapingbee-cli/reference/google/: overview.md
.opencode/skills/scrapingbee-cli/reference/scrape/: extraction.md
.opencode/skills/scrapingbee-cli/reference/usage/: patterns.md
.opencode/skills/scrapingbee-cli/reference/walmart/: product.md
.opencode/skills/scrapingbee-cli/reference/youtube/: search-output.md
docs/: advanced-usage.md
plugins/scrapingbee-cli/.claude-plugin/: plugin.json
plugins/scrapingbee-cli/skills/scrapingbee-cli/: SKILL.md
plugins/scrapingbee-cli/skills/scrapingbee-cli-guard/: SKILL.md
plugins/scrapingbee-cli/skills/scrapingbee-cli/reference/amazon/: pricing.md
plugins/scrapingbee-cli/skills/scrapingbee-cli/reference/batch/: export.md  output.md
plugins/scrapingbee-cli/skills/scrapingbee-cli/reference/chatgpt/: overview.md
plugins/scrapingbee-cli/skills/scrapingbee-cli/rules/: security.md
scripts/: sync-skills.sh
skills/scrapingbee-cli/: SKILL.md
skills/scrapingbee-cli/.claude/agents/: scraping-pipeline.md
skills/scrapingbee-cli/reference/: troubleshooting.md
skills/scrapingbee-cli/reference/amazon/: product.md  search-output.md  search.md
skills/scrapingbee-cli/reference/batch/: output.md  overview.md
skills/scrapingbee-cli/reference/chatgpt/: overview.md
skills/scrapingbee-cli/reference/crawl/: overview.md
skills/scrapingbee-cli/reference/fast-search/: overview.md
skills/scrapingbee-cli/reference/google/: overview.md
skills/scrapingbee-cli/reference/proxy/: strategies.md
skills/scrapingbee-cli/reference/schedule/: overview.md
skills/scrapingbee-cli/reference/scrape/: extraction.md  options.md  overview.md  strategies.md
skills/scrapingbee-cli/reference/usage/: patterns.md
skills/scrapingbee-cli/reference/walmart/: product.md  search-output.md  search.md
skills/scrapingbee-cli/reference/youtube/: metadata-output.md  metadata.md  search-output.md  search.md
skills/scrapingbee-cli/rules/: install.md  security.md
src/scrapingbee_cli/: __init__.py  audit.py  batch.py  cli.py  cli_utils.py  client.py  config.py  crawl.py  credits.py  exec_gate.py  extract.py  help_formatter.py  interactive.py  theme.py
src/scrapingbee_cli/commands/: __init__.py  amazon.py  auth.py  chatgpt.py  crawl.py  export.py  fast_search.py  gemini.py  google.py  schedule.py  scrape.py  tutorial.py  unsafe.py  usage.py  walmart.py  youtube.py
src/scrapingbee_cli/tutorial/: __init__.py  runner.py  steps.py
tests/: __init__.py  conftest.py  run_e2e_tests.py
tests/integration/: __init__.py  helpers.py  test_cli_integration.py
tests/unit/: __init__.py  test_audit.py  test_batch.py  test_cli.py  test_cli_utils.py  test_client.py  test_config.py  test_coverage_gaps.py  test_crawl.py  test_error_responses.py  test_exec_gate.py  test_export.py  test_repl_pty.py  test_responsive_tiers.py  test_scrollback_selection.py  test_smart_extract.py  test_v122_fixes.py  test_v132_fixes.py
(+4 files in other folders)
